Made - players can make their moves separatly

--- a/index.html
+++ b/index.html
@@ -28,3 +28,21 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+<!--
+ CREATING THE GAME CONCEPT:
+ 1) There are two players
+ -Players choose fields for their moves
+    *Intercept (pārtvert) a click event on an element
+    *Adding "x" in first players cell (šūna)
+    *Adding "o" in second players sell
+
+
+
+ 2) One has "o", second "x"
+ 3) Players make their moves seperatly
+ 4) One, who will be the first with his symbols in one line  - wins
+ 5) It is forbidden to use one field twice
+
+
+-->
