--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#" data-coord="9"></a>
     </div>
 
-    <a href="#" class="btn reset">Reset</a>
+    <a href="#" class="btn reset" onclick="reset()">Reset</a>
 
     <script src="script.js"></script>
   </body>
@@ -36,13 +36,13 @@
     *Intercept (pārtvert) a click event on an element
     *Adding "x" in first players cell (šūna)
     *Adding "o" in second players sell
-
-
-
  2) One has "o", second "x"
  3) Players make their moves seperatly
- 4) One, who will be the first with his symbols in one line  - wins
- 5) It is forbidden to use one field twice
+ 4) It is forbidden to use one field twice
+
+ VALIDATION
+ 5) One, who will be the first with his symbols in one line  - wins
+    *Define win combinations
 
 
 -->
